MSIE 7 fix: <h1>-<h3> too high
IE7 renders the <a> element within <h1>, <h2> and <h3> as two-line-element. This causes a single line headline with a height of two lines. 'display: inline-block' fixes the behaviour.

--- a/static/css/screen.css
+++ b/static/css/screen.css
@@ -349,7 +349,7 @@ div#content .dokuwiki h1 {
 div#content .dokuwiki h1,
 div#content .dokuwiki h2 {
   margin-bottom: 0.6em;
-  font-weight: normal;
+  font-weight: normal;f
 }
 div#content .dokuwiki h3,
 div#content .dokuwiki h4,
@@ -995,6 +995,19 @@ div.dokuwiki div.imagemeta img.thumb {
 /******************************************************************************
  ********************* Browser Hacks and corrections **************************
  ******************************************************************************/
+/* MSIE 7: renders the anchor in headlines in two lines?! */
+*:first-child+html div#content .dokuwiki h1 a,
+*:first-child+html div#content .dokuwiki h2 a,
+*:first-child+html div#content .dokuwiki h3 a {
+  display: inline-block;
+}
+*:first-child+html div#content .dokuwiki h1 a {
+  padding-bottom: 2px;
+}
+*:first-child+html div#content .dokuwiki h2 a,
+*:first-child+html div#content .dokuwiki h3 a {
+  padding-bottom: 1px;
+}
 /* MSIE: fix textarea in admin menu (incl. jumping bug MSIE8) */
 textarea,
 .dokuwiki #dw__editform textarea.edit {
